添加缺失的test、ci脚本命令
Signed-off-by: Talbot3 <1796560392@qq.com>

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "echo 'ok'",
+    "ci": "echo 'ci'"
   },
   "dependencies": {
     "next": "11.1.2",
