--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "ci": "echo 'ci'"
   },
   "dependencies": {
-    "@material-ui/icons": "^4.11.2",
     "antd": "^4.16.13",
     "clsx": "latest",
     "next": "11.1.2",
     "next-page-transitions": "latest",
+    "next-plugin-antd-less": "^1.4.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
